--- a/src/log.conf
+++ b/src/log.conf
@@ -19,7 +19,7 @@ args=(sys.stdout,)
 
 [handler_file]
 class=FileHandler
-kwargs={"filename": "logger_file.log"}
+kwargs={"filename": "src/logger_file.log"}
 level=INFO
 formatter=fileFormatter
 
