--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
         image: postgres
         environment:
             POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: password
+            POSTGRES_PASSWORD: password1234
             POSTGRES_DB: compoundsdb
         volumes:
             - postgres_data:/var/lib/postgresql/data/
         ports:
-          - "5432:5432"
+          - "5433:5432"
         restart: always
 
 volumes:
